<resources>
    <string name="app_name">SKY PREMIUM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">ACCOUNT</string>
    <string name="language">LANGUAGE</string>
    <string name="sky"></string>
    <string name="tlt_submit">Submit</string>
    <string name="tlt_reset">Reset</string>
    <string name="tlt_send">Send</string>
    <string name="tlt_yes_index">Yes</string>
    <string name="tlt_no_index">No</string>
    <string name="tlt_cancel">Cancel</string>
    <string name="tlt_back">Back</string>
    <string name="tlt_title">Title</string>
    <string name="tlt_edit">Edit</string>
    <string name="tlt_ok">Ok</string>
    <string name="tlt_return">Return</string>
	<string name="version_deploy">106.0</string>
    <string name="msg_no">NO</string>
    <string name="msg_yes">YES</string>
    <string name="msg_logout_confirm">Are you sure?</string>
    <string name="msg_password_change_success">Password change successful</string>
    <string name="msg_return">Return</string>
    <string name="msg_language">Language</string>
    <string name="msg_member_id">Member ID </string>
    <string name="msg_member_email">Email </string>
    <string name="msg_content">Content</string>
    <string name="msg_success">Successful!</string>
    <string name="msg_failure">Please check network then reconnect!</string>
    <string name="msg_subject">Subject</string>
    <string name="msg_search">Search</string>
    <string name="msg_err_connect">Could not connect to the server</string>
    <string name="msg_continue_shopping">Continue shopping</string>
    <string name="msg_process_to_checkout">Process to checkout</string>
    <string name="msg_success_add_to_cart">Product successfully added to your shopping cart</string>
    <string name="msg_err_inactive_login">Please input active account.</string>
    <string name="msg_err_inactive_login_j">アクティブアカウントを入力してください。</string>
    <string name="msg_content_null">Content null</string>
    <string name="msg_enter_title">Please enter title</string>
    <string name="msg_enter_content">Please enter content</string>
	<string name="msg_enter_type">Please select contact type</string>
	<string name="msg_sign_in">SIGN IN</string>
	<string name="msg_clear">Clear</string>
	<string name="msg_push_confirm">SKY PREMIUM Would Like to Send You Notifications</string>
	<string name="msg_push_confirm_j">新着情報とメールのプッシュ通知を表示します。</string>
	<string name="msg_push_confirm_no">Don\'t Allow</string>
	<string name="msg_push_confirm_no_j">拒否</string>
	<string name="msg_push_confirm_yes">OK</string>
	<string name="msg_push_confirm_yes_j">OK</string>
	<string name="msg_result_search"> Search Result</string>
	<string name="msg_result_search_not_found">Search no result found</string>
	<string name="msg_result_search_not_found_j">検索結果が見つかりません</string>
    <string name="menu_sky_premium">SKY PREMIUM</string>
    <string name="menu_mailbox">Mail box</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_download">Download</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_news">News</string>
    <string name="menu_about_spmc">About SKY PREMIUM</string>
    <string name="menu_invite_friend">Invite Friend</string>
    <string name="menu_qr_code">QR Code</string>
    <string name="menu_service_list">Home (Service List)</string>
    <string name="spmc_selection">SPMC SELECTION</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_change_pass">Change password</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_lang_japanese">日本語</string>
    <string name="menu_lang_english">English</string>
    <string name="invite_lang_english">Mail English</string>
    <string name="menu_language">LANGUAGE</string>
    <string name="menu_account">ACCOUNT</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_version">Version </string>
    <string name="menu_version_doc">2015 SKY PREMIUM INTERNATIONAL PTE. LTD.</string>
    <string name="menu_help">HELP</string>
    <string name="menu_help_j">ヘルプ</string>
	<string name="menu_trade_law">Trade Law</string>
	<string name="menu_privacy">Privacy Policy</string>
	<string name="menu_term">Terms Of Use</string>
    <string name="more_detail">More detail</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="mailbox_no_result">No result found</string>
    <string name="msg_search_by_date">Date Time</string>
    <string name="login">LOGIN</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_remeber_password">Save password</string>
    <string name="login_password">Password</string>
    <string name="login_validate_id">Please input member id.</string>
    <string name="login_validate_id_j">会員IDを入力してください。</string>
    <string name="login_validate_pwd">Please input password.</string>
    <string name="login_validate_pwd_j">パスワードを入力してください。</string>
    <string name="help_policy">Privacy Policy</string>
    <string name="help_trade_law">Trade law</string>
    <string name="help_term">Term of use</string>
    <string name="help_policy_j">プライバシーポリシー</string>
    <string name="help_trade_law_j">特定商取引法に基づく表記</string>
    <string name="help_term_j">ご利用規約</string>
    <string name="forgotpwd_back_to_login">Back To Sign In</string>
    <string name="forgotpwd_lable1">If you forgot your ID, please contact</string>
    <string name="forgotpwd_lable2">support@member.skypremium.com.sg</string>
    <string name="forgotpwd_lable3"></string>
    <string name="forgotpwd_btn">SUBMIT</string>
    <string name="forgotpwd_hint_mail">Email </string>
    <string name="profile">Information</string>
    <string name="profile_first_name">First name(EN)</string>
    <string name="profile_middle_name">Middle name(EN)</string>
    <string name="profile_last_name">Last name(EN)</string>
    <string name="profile_email">Email</string>
    <string name="profile_mobile_mail">Mobile mail</string>
    <string name="profile_tel">Tel</string>
    <string name="profile_date_of_birth">Date of birth</string>
    <string name="profile_sex">Sex</string>
    <string name="profile_sex_male">Male</string>
    <string name="profile_sex_female">Female</string>
    <string name="profile_country">Country</string>
    <string name="profile_city">City</string>
    <string name="profile_postal_code">Postal code</string>
    <string name="profile_address">Address</string>
    <string name="profile_address_kana">Address Kana</string>
    <string name="profile_recommended_by">Recommended by</string>
    <string name="profile_recommend">Recommend</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_update">Update profile</string>
    <string name="profile_language">Language</string>
    <string name="invite_mail_language">Mail Language</string>
    <string name="profile_information">Information</string>
    <string name="profile_contract">Contract</string>
    <string name="profile_purchased">Purchase History</string>
    <string name="profile_fullname">Name</string>
    <string name="profile_id">ID</string>
    <string name="profile_recomment_id">ID</string>
    <string name="profile_recomment_name">Name</string>
    <string name="profile_recomment_email">Mail</string>
    <string name="profile_recomment_id_j">ID</string>
    <string name="profile_recomment_name_j">氏名</string>
    <string name="profile_recomment_email_j">メール</string>
    <string name="profile_edit">Edit Information</string>
    <string name="profile_edit_j">会員情報更新</string>
    <string name="profile_address_validate">Address must contain english characters only.</string>
    <string name="profile_address_validate_j">ご住所（ローマ字）に半角文字だけを入力して下さい。</string>
    <string name="change_password">Change password</string>
    <string name="change_password_old">Old password</string>
    <string name="change_password_new">New password</string>
    <string name="change_password_confirm">Confirm new password</string>
    <string name="purchase_history">Purchased</string>
    <string name="purchase_order_code">Order Code</string>
    <string name="purchase_amount">Amount</string>
    <string name="purchase_status">Status</string>
    <string name="purchase_product">Product</string>
    <string name="purchase_price">Price</string>
    <string name="contract">Contract</string>
    <string name="contract_status">Status</string>
    <string name="contract_grade">Grade</string>
    <string name="contract_payment_method">Payment method</string>
    <string name="contract_registered_date">Registered date</string>
    <string name="contract_start_date">Start date</string>
    <string name="contact_title">Select your contact type *</string>
    <string name="contact_type_about_spmc">About SKY PREMIUM</string>
    <string name="contact_type_about_annual_fee">About membership fee</string>
    <string name="contact_type_about_cancel_membership">Cancel the membership</string>
    <string name="contact_type_about_upgrate_request">Upgrade request </string>
    <string name="contact_type_about_personal_information">About personal information</string>
    <string name="contact_type_other">Other</string>
    <string name="contact_type_update_contract">Update contract</string>
    <string name="contact_type_update_contract_j">契約更新について</string>
    <string name="title_popup_sort">Sort By</string>
    <string name="title_btn_name_sort">Name</string>
    <string name="title_btn_date_sort">Date</string>
    <string name="title_btn_category_sort">Category</string>
    <string name="tlt_submit_j">送信</string>
    <string name="tlt_reset_j">リセット</string>
    <string name="tlt_back_j">戻る</string>
    <string name="change_password_old_j">現行パスワード </string>
    <string name="change_password_new_j">新しいパスワード </string>
    <string name="change_password_confirm_j">新しいパスワード確認 </string>
    <string name="contact_title_j">お問い合わせタイプ選択 *</string>
    <string name="contact_type_about_spmc_j">SKY PREMIUMについて</string>
    <string name="contact_type_about_annual_fee_j">会費の支払いに関して</string>
    <string name="contact_type_about_cancel_membership_j">退会について</string>
    <string name="contact_type_about_upgrate_request_j">アップグレード希望 </string>
    <string name="contact_type_about_personal_information_j">個人情報、IDについて</string>
    <string name="contact_type_other_j">その他</string>
    <string name="title_popup_sort_j">ソート</string>
    <string name="title_btn_name_sort_j">タイトル</string>
    <string name="title_btn_date_sort_j">日付</string>
    <string name="title_btn_category_sort_j">カテゴリ</string>
	<string name="myaccount">My Account</string>
	<string name="myaccount_j">マイアカウント</string>
	<string name="myaccount_history">Order History</string>
	<string name="myaccount_history_j">注文履歴</string>
	<string name="myaccount_address">My Addresses</string>
	<string name="myaccount_address_j">住所</string>
	<string name="myaccount_info">My Personal Information</string>
	<string name="myaccount_info_j">個人情報</string>
	<string name="myaccount_credit">My Credit Cards</string>
	<string name="myaccount_credit_j">クレジットカード情報</string>
	<string name="myaccount_favorite">My Favourite Products</string>
	<string name="myaccount_favorite_j">お気に入り商品</string>
	<string name="myaccount_cancel">Cancel</string>
	<string name="myaccount_cancel_j">キャンセル</string>
	<string name="mya_address_des1">This is a function that can registered the address of your friends or relatives.</string>
	<string name="mya_address_des2">Your registered address is as below.</string>
	<string name="mya_address_des3">If it is changed, please update.</string>
	<string name="mya_address_des1_j">お友達や親戚などの住所を登録をしておくことができる機能です。</string>
	<string name="mya_address_des2_j">ご登録住所は以下の通りです。 </string>
	<string name="mya_address_des3_j">変更される場合は、更新ボタンを押してください。</string>
</resources>