<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.SkyPremiumLtd.SkyPremium"
    android:id="@+id/dialog_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_transparent"
    android:gravity="center"
    android:orientation="vertical" >
    <!-- @drawable/background_retangle_boder -->
    <LinearLayout
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_retangle_boder"
        android:gravity="center"
        android:orientation="vertical" >
        <LinearLayout
    		android:id="@+id/dialog_select_title_main"
	       android:layout_width="@dimen/dimen_280dp"
	       android:layout_height="wrap_content"
	       android:layout_marginTop="@dimen/dimen_20dp"
	       android:layout_marginBottom="@dimen/dimen_20dp"
	       android:gravity="center"
	       android:orientation="horizontal" 
	       android:visibility="visible">
	       <org.com.atmarkcafe.sky.customviews.charting.MTextView
	           android:id="@+id/dialog_select_title"
	           android:layout_width="@dimen/dimen_280dp"
	           android:layout_height="wrap_content"
	           android:gravity="center|center_vertical"
	           android:text="@string/myaccount"
	           custom:txtEng="@string/myaccount"
	           custom:txtJa="@string/myaccount_j"
	           android:textColor="#000000"
	           android:textSize="@dimen/dimen_18dp" 
	           android:textStyle="bold"/>
	     </LinearLayout>
	    <org.com.atmarkcafe.sky.customviews.charting.MTextView
	        android:id="@+id/myaccount_history"
	        android:layout_width="@dimen/dimen_280dp"
	        android:layout_height="@dimen/dimen_32dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/popu_btn_confirm"
	        android:gravity="center"
	        android:layout_marginLeft="@dimen/dimen_20dp"
	        android:layout_marginRight="@dimen/dimen_20dp"
	        android:textColor="#000000"
	        android:text="@string/myaccount_history"
	        custom:txtEng="@string/myaccount_history"
	        custom:txtJa="@string/myaccount_history_j"
	        android:singleLine="true"/>
	    <org.com.atmarkcafe.sky.customviews.charting.MTextView
	        android:id="@+id/myaccount_address"
	        android:layout_width="@dimen/dimen_280dp"
	        android:layout_height="@dimen/dimen_32dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/popu_btn_confirm"
	        android:gravity="center"
	        android:layout_marginTop="@dimen/dimen_10dp"
	        android:layout_marginLeft="@dimen/dimen_20dp"
	        android:layout_marginRight="@dimen/dimen_20dp"
	        android:textColor="#000000"
	        android:text="@string/myaccount_address"
	        custom:txtEng="@string/myaccount_address"
	        custom:txtJa="@string/myaccount_address_j"
	        android:singleLine="true"/>
	    <org.com.atmarkcafe.sky.customviews.charting.MTextView
	        android:id="@+id/myaccount_info"
	        android:layout_width="@dimen/dimen_280dp"
	        android:layout_height="@dimen/dimen_32dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="@dimen/dimen_10dp"
	        android:background="@drawable/popu_btn_confirm"
	        android:gravity="center"
	        android:layout_marginLeft="@dimen/dimen_20dp"
	        android:layout_marginRight="@dimen/dimen_20dp"
	        android:textColor="#000000"
	        android:text="@string/myaccount_info"
	        custom:txtEng="@string/myaccount_info"
	        custom:txtJa="@string/myaccount_info_j"
	        android:singleLine="true"/>
	    <org.com.atmarkcafe.sky.customviews.charting.MTextView
	        android:id="@+id/myaccount_favorite"
	        android:layout_width="@dimen/dimen_280dp"
	        android:layout_height="@dimen/dimen_32dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="@dimen/dimen_10dp"
	        android:background="@drawable/popu_btn_confirm"
	        android:gravity="center"
	        android:layout_marginLeft="@dimen/dimen_20dp"
	        android:layout_marginRight="@dimen/dimen_20dp"
	        android:textColor="#000000"
	        android:text="@string/myaccount_favorite"
	        custom:txtEng="@string/myaccount_favorite"
	        custom:txtJa="@string/myaccount_favorite_j"
	        android:singleLine="true"/>
	    
	    <org.com.atmarkcafe.sky.customviews.charting.MTextView
	        android:id="@+id/myaccount_credit"
	        android:layout_width="@dimen/dimen_280dp"
	        android:layout_height="@dimen/dimen_32dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/popu_btn_confirm"
	        android:gravity="center"
	        android:layout_marginTop="@dimen/dimen_10dp"
	        android:layout_marginLeft="@dimen/dimen_20dp"
	        android:layout_marginRight="@dimen/dimen_20dp"
	        android:textColor="#000000"
	        android:text="@string/myaccount_credit"
	        custom:txtEng="@string/myaccount_credit"
	        custom:txtJa="@string/myaccount_credit_j"
	        android:singleLine="true"/>
	    
	    <org.com.atmarkcafe.sky.customviews.charting.MTextView
	        android:id="@+id/myaccount_cancel"
	        android:layout_width="@dimen/dimen_280dp"
	        android:layout_height="@dimen/dimen_32dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/popu_btn_confirm"
	        android:gravity="center"
	        android:layout_marginTop="@dimen/dimen_10dp"
	        android:layout_marginLeft="@dimen/dimen_20dp"
	        android:layout_marginRight="@dimen/dimen_20dp"
	        android:layout_marginBottom="@dimen/dimen_20dp"
	        android:textColor="#000000"
	        android:text="@string/myaccount_cancel"
	        custom:txtEng="@string/myaccount_cancel"
	        custom:txtJa="@string/myaccount_cancel_j"
	        android:singleLine="true"/>
    </LinearLayout>    
    
</LinearLayout>